changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Sort maps on the quest page.
 utils/mapper.c
Nicolas Weeger 2008-04-02

Remove obsolete get_map_ob define, replaced by GET_MAP_OB.
 common/button.c map.c utils.c
 include/map.h
 plugins/common/plugin_common.c
 random_maps/decor.c exit.c special.c standalone.c style.c treasure.c wall.c
 server/alchemy.c apply.c attack.c c_wiz.c disease.c monster.c move.c pets.c
  player.c plugins.c resurrection.c rune.c shop.c skill_util.c skills.c
  spell_attack.c spell_effect.c spell_util.c time.c
 socket/item.c
 utils/bwp.c mapper.c
 types/common/projectile.c
 types/exit/exit.c
 types/peacemaker/peacemaker.c
 types/shop_inventory/shop_inventory.c
 types/spell_effect/spell_effect.c
Nicolas Weeger 2008-03-30

Remove static buffer.
 server/player.c
Nicolas Weeger 2008-03-30

common/living.c: remove unneeded test.
Nicolas Weeger 2008-03-30

Move function is_legal_2ways_exit() to relevant file, remove legacy function.
 include/sproto.h
 server/apply.c
 types/exit/exit.c
Nicolas Weeger 2008-03-30

Extract blindness to its own file.
 include/sproto.h typesproto.h
 server/ob_types.c time.c
 types/legacy/process.c
 types/Makefile.am
Added file:
 types/blindness/blindness.c
Nicolas Weeger 2008-03-30

Change test order to speed up some, fix comments.
 server/c_object.c
Nicolas Weeger 2008-03-30

Rename a few xxx_player() functions to xxx_living() for coherence.
 include/sproto.h
 server/apply.c attack.c skills.c spell_effect.c spell_util.c
Nicolas Weeger 2008-03-30

Remove global variables. Make functions static.
 random_maps/maze_gen.c maze_gen.h rproto.h
Nicolas Weeger 2008-03-30
