@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Link to quest's definition instead of the page itself.
+ utils/mapper.c
+Nicolas Weeger 2008-04-02
+
 Sort maps on the quest page.
  utils/mapper.c
 Nicolas Weeger 2008-04-02
